# CLI-API-to-Atlassian

./: README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  trello_api.py
.github/workflows/: trello-cli.yml
trello_cli_service/: __init__.py  main.py  trello_api.py
unit_tests/: test_api.py  test_main.py
