[tool.poetry]
name = "trello-cli-service"
version = "0.1.0"
description = ""
authors = ["Kirity <kiritykumar1998@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
trello-cli-service = "trello_cli_service.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
