[metadata]
name = trello-cli-service
description = Allows you to add cards and labels
author =  Kirity Ganga
License = MIT
platforms = win32
classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages =
    trello_cli_service
install_requires =
    requests
    typer
    typer-cli

[options.extras_require]
testing = 
    pytest>=7.0